<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product_info"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_product_info" />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_stock" />
        <item
            android:id="@+id/nav_move_stock"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_move_stock" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>