<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_product_info">

    <fragment
        android:id="@+id/nav_product_info"
        android:name="com.example.myapplication.ui.productinfo.ProductInfoFragment"
        android:label="@string/menu_product_info"
        tools:layout="@layout/fragment_product_info" />

    <fragment
        android:id="@+id/nav_stock"
        android:name="com.example.myapplication.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/nav_move_stock"
        android:name="com.example.myapplication.ui.movestock.MoveStockFragment"
        android:label="@string/menu_move_stock"
        tools:layout="@layout/fragment_move_stock" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>